feat: add backface visibility utilities

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -103,6 +103,7 @@ Tools / get corePlugins / list / 0: |-
     "userSelect",
     "verticalAlign",
     "visibility",
+    "backfaceVisibility",
     "whitespace",
     "wordBreak",
     "hyphens",
@@ -265,6 +266,7 @@ Tools / get corePlugins / list3 / 2: |-
     "userSelect",
     "verticalAlign",
     "visibility",
+    "backfaceVisibility",
     "whitespace",
     "wordBreak",
     "hyphens",
