feat: add empty cell visibility utilities

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -28,6 +28,7 @@ Tools / get corePlugins / list / 0: |-
     "boxSizing",
     "cursor",
     "captionSide",
+    "emptyCellVisibility",
     "display",
     "flexDirection",
     "flexWrap",
@@ -191,6 +192,7 @@ Tools / get corePlugins / list3 / 2: |-
     "boxDecorationBreak",
     "boxSizing",
     "captionSide",
+    "emptyCellVisibility",
     "display",
     "flexDirection",
     "flexWrap",
