feat: add writing mode utilities

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -107,6 +107,7 @@ Tools / get corePlugins / list / 0: |-
     "backfaceVisibility",
     "whitespace",
     "wordBreak",
+    "writingMode",
     "hyphens",
     "width",
     "zIndex",
@@ -271,6 +272,7 @@ Tools / get corePlugins / list3 / 2: |-
     "backfaceVisibility",
     "whitespace",
     "wordBreak",
+    "writingMode",
     "hyphens",
     "width",
     "zIndex",
