feat: add text shadow utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -90,6 +90,7 @@ Tools / get corePlugins / list / 0: |-
     "textColor",
     "textOpacity",
     "textOverflow",
+    "textShadow",
     "fontStyle",
     "textTransform",
     "textDecorationStyle",
@@ -255,6 +256,7 @@ Tools / get corePlugins / list3 / 2: |-
     "textColor",
     "textOpacity",
     "textOverflow",
+    "textShadow",
     "fontStyle",
     "textTransform",
     "textDecorationStyle",
