--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -405,6 +405,19 @@ Tools / text indent / css / 0: |-
   .-indent-2em {
     text-indent: -2em;
   }
+Tools / text shadow / css / 0: |-
+  .text-shadow {
+    text-shadow: 0px 0px 1px rgb(0 0 0 / 20%), 0px 0px 1px rgb(1 0 5 / 10%);
+  }
+  .text-shadow-none {
+    text-shadow: none;
+  }
+  .text-shadow-sm {
+    text-shadow: 1px 1px 3px rgb(36 37 47 / 25%);
+  }
+  .text-shadow-lg {
+    text-shadow: 3px 3px 6px rgb(0 0 0 / 26%), 0 0 5px rgb(15 3 86 / 22%);
+  }
 Tools / transform rotateY / css / 0: |-
   .transform {
     --tw-translate-x: 0;
