feat: add text stroke color and width utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -99,6 +99,8 @@ Tools / get corePlugins / list / 0: |-
     "textDecorationOpacity",
     "textDecoration",
     "textIndent",
+    "textStrokeColor",
+    "textStrokeWidth",
     "fontSmoothing",
     "fontVariantNumeric",
     "letterSpacing",
@@ -265,6 +267,8 @@ Tools / get corePlugins / list3 / 2: |-
     "textDecorationOpacity",
     "textDecoration",
     "textIndent",
+    "textStrokeColor",
+    "textStrokeWidth",
     "fontSmoothing",
     "fontVariantNumeric",
     "letterSpacing",
