feat: add underline offset utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -97,6 +97,7 @@ Tools / get corePlugins / list / 0: |-
     "textDecorationLength",
     "textDecorationColor",
     "textDecorationOpacity",
+    "textDecorationOffset",
     "textDecoration",
     "textIndent",
     "textStrokeColor",
@@ -265,6 +266,7 @@ Tools / get corePlugins / list3 / 2: |-
     "textDecorationLength",
     "textDecorationColor",
     "textDecorationOpacity",
+    "textDecorationOffset",
     "textDecoration",
     "textIndent",
     "textStrokeColor",
@@ -393,7 +395,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "stroke",
     "text",
     "tracking",
-    "line",
+    "underline",
     "w",
     "z",
     "gap",
@@ -479,7 +481,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "stroke",
     "text",
     "tracking",
-    "line",
+    "underline",
     "w",
     "z",
     "gap",
