feat: add stroke dash utilities

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -85,6 +85,8 @@ Tools / get corePlugins / list / 0: |-
     "fill",
     "stroke",
     "strokeWidth",
+    "strokeDashArray",
+    "strokeDashOffset",
     "tableLayout",
     "textAlign",
     "textColor",
@@ -254,6 +256,8 @@ Tools / get corePlugins / list3 / 2: |-
     "fill",
     "stroke",
     "strokeWidth",
+    "strokeDashArray",
+    "strokeDashOffset",
     "tableLayout",
     "textAlign",
     "textColor",
