perf: change cell-empty to empty-cells

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -28,7 +28,7 @@ Tools / get corePlugins / list / 0: |-
     "boxSizing",
     "cursor",
     "captionSide",
-    "emptyCellVisibility",
+    "emptyCells",
     "display",
     "flexDirection",
     "flexWrap",
@@ -201,7 +201,7 @@ Tools / get corePlugins / list3 / 2: |-
     "boxDecorationBreak",
     "boxSizing",
     "captionSide",
-    "emptyCellVisibility",
+    "emptyCells",
     "display",
     "flexDirection",
     "flexWrap",
