--- a/test/interface/__snapshots__/plugin.test.ts.yml
+++ b/test/interface/__snapshots__/plugin.test.ts.yml
@@ -4,6 +4,18 @@ Tools / addComponents nested selectors / css / 0: |-
     line-height: 1.25rem;
     padding: 1rem;
   }
+Tools / addComponents order / css / 0: |-
+  [data-theme=dark] {
+    --p: 259 94% 61%;
+  }
+  @media (prefers-color-scheme:dark) {
+    :root {
+      --p: 259 94% 61%;
+    }
+  }
+  [data-theme=light] {
+    --p: 259 94% 51%;
+  }
 Tools / addComponents with attribute selectors / css / 0: |-
   btn-disabled, .btn[disabled] {
     --tw-bg-opacity: 1;
