test: failed test for apply order

--- a/test/parser/__snapshots__/css.test.ts.yml
+++ b/test/parser/__snapshots__/css.test.ts.yml
@@ -268,6 +268,11 @@ Tools / apply hover with multiple selector / css / 0: |-
     --tw-text-opacity: 1;
     color: rgba(254, 202, 202, var(--tw-text-opacity));
   }
+Tools / apply order / css / 0: |-
+  .test {
+    position: relative;
+    position: fixed;
+  }
 Tools / background-image url / css / 0: |-
   .background {
     background-image: url('https://awebsite.com/an-image.png');
