--- a/test/processor/__snapshots__/compile.test.ts.yml
+++ b/test/processor/__snapshots__/compile.test.ts.yml
@@ -36,3 +36,8 @@ Tools / compile important / important / 0: |-
     --tw-text-opacity: 1 !important;
     color: rgba(110, 231, 183, var(--tw-text-opacity)) !important;
   }
+Tools / compile order / css / 0: |-
+  .windi-1kiu5fv {
+    position: relative;
+    position: fixed;
+  }
