--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -7,6 +7,13 @@ Tools / generated correct css for space-x-reverse / css / 0: |-
   .space-x-reverse > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 1;
   }
+Tools / interpert order / css / 0: |-
+  .fixed {
+    position: fixed;
+  }
+  .relative {
+    position: relative;
+  }
 Tools / interpret / css / 1: |-
   .bg-cool-gray-300 {
     --tw-bg-opacity: 1;
